--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://xiadongblog.com
 date_format: "ordinal"
 title: 码志
 subtitle: "打码改变人生"
-description: "夏冬个人博客"
+description: "夏冬的个人博客"
 keywords: 夏冬, Xia Dong, xiadongShadow, xiadong
 timezone: Asia/Shanghai
 encoding: "utf-8"
@@ -15,11 +15,11 @@ side_bar_repo_limit: 5
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
+author: Xia Dong
 organization: 
 organization_url: 
-github_username: mzlogin
-location: xia'an, China
+github_username: xiadongShado
+location: Wuhan, China
 email: xiadong332@icloud.com
 
 # ---------------- #
@@ -81,7 +81,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: mzlogin/mzlogin.github.io
+repository: xiadongShadow/xiadongblog.github.io
 
 # ---------------- #
 #      Comments    #
@@ -95,14 +95,14 @@ disqus:
     username: 
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: mzlogin
+    owner: xiadongShadow
     repo: blog-comments
     oauth:
         client_id: d2e1cbbd298958076462
         client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: mzlogin
+    owner: xiadongShadow
     repo: blog-comments
     clientID: d2e1cbbd298958076462
     clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
