--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 baseurl:
 url: https://xiadongblog.com
 date_format: "ordinal"
-title: 码志
-subtitle: "打码改变人生"
+title: 夏冬博客
+subtitle: "分享技术，体会生活"
 description: "夏冬的个人博客"
 keywords: 夏冬, Xia Dong, xiadongShadow, xiadong
 timezone: Asia/Shanghai
