--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://www.xiadongblog.com
 date_format: "ordinal"
 title: 夏冬博客
-subtitle: "分享技术，体会生活"
+subtitle: "学习技术，学会生活"
 description: "夏冬的个人博客"
 keywords: 夏冬, Xia Dong, xiadongShadow, xiadong
 timezone: Asia/Shanghai
